[tool.poetry]
name = "repl_python3_malWhere-1"
version = "0.1.0"
description = ""
authors = ["TheUnsocialEngi <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
discord = "^1.7.3"
PyAutoGUI = "^0.9.53"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
